--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher" />
+        android:id="@+id/image_profile"
+        android:src="@drawable/default_avtar"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/image_profile"
+        android:layout_marginStart="5dp"
         android:orientation="vertical"
         android:layout_centerVertical="true">
 
@@ -20,18 +22,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username"
+            android:text="username"
             android:maxLines="1"
             android:textStyle="bold"
             android:textColor="@color/design_default_color_primary_dark"/>
-        
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/fullname"
+            android:text="Full Name"
             android:maxLines="1"/>
 
     </LinearLayout>
-    
+
     <android.widget.Button
         android:layout_width="wrap_content"
         android:layout_height="30dp"
