--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -104,6 +104,7 @@
             android:id="@+id/random"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="\n\n"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp" />
 
